# myCAD

./: LICENSE  README.md
myCAD/: CMakeLists.txt  CMakePresets.json  Program Flow Diagram.pptx  vcpkg.json
myCAD/myCAD/: CMakeLists.txt  myCAD.cpp
myCAD/myCAD/Im/: Imfilebrowser.h
myCAD/myCAD/elems/: camera.h  element.cpp  element.h  face.cpp  light.h  mesh.cpp  mesh.h  vertex_holder.cpp
myCAD/myCAD/mesh_import/: import_obj.cpp
myCAD/myCAD/render/: opengl_buffer_manager.cpp  opengl_buffer_manager.h  opengl_context.cpp  render_base.h  ui_context.cpp
myCAD/myCAD/shader/: shader_util.cpp  shader_util.h
myCAD/myCAD/ui/: Ribbon.cpp  Ribbon.h  property_panel.cpp  property_panel.h  scene_view.cpp  scene_view.h
myCAD/myCAD/user_tools/: tools.cpp  tools.h
myCAD/myCAD/utils/: imgui_widgets.h
myCAD/myCAD/window/: jgl_window.cpp  jgl_window.h
